--- a/index.html
+++ b/index.html
@@ -6,12 +6,38 @@
     <title>Codemas 2020 - Vánoční přání</title>
     
     <link href="style.css" rel="stylesheet" type="text/css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <h1>Vánoční přání</h1>
     </header>
+    
+    <main>
+        <section class="prani">
+            <img src="obrazky/vanoce.jpeg" alt="společné vánoce">
+
+            <p class="prani-text">
+                <span class="osloveni">Milá verčo,</span> přeju ti krásné prožití vánočních svátků. Užij si v těchto dnech klidné dny společně se svou rodinou. Běž sáňkovat, udělej si hrnec svařáku a celý ho vypij. <span class="podpis">Tvoje sestra Maruška  s rodinou</span>
+            </p>
+        </section>
+        <section class="pristi-rok">
+            <p class="pristi-rok-text">
+                <span class="pristi-rok-text-nadpis">A v roce 2021...</span> Přála bych si, abychom v roce 2021 na sebe měly víc času, proto si tady odložím, co bychom spolu mohly podniknout. Za rok tobě i mně přijde e-mail, kde nám tyhle věci připomenou, jestli jsme to opravdu splnily…
+            </p>
+
+            <div class="pristi-rok-todo">
+                <p class="pristi-rok-todo-polozka">Jít na víno</p>
+                <p class="pristi-rok-todo-polozka">Konečně začít společně chodit na zumbu</p>
+                <p class="pristi-rok-todo-polozka">Naučit se upéct sušenky ve tvaru jezevčíka </p>
+            </div>
+        </section>
+        <section class="galerie">
+            <img src="obrazky/galerie/obrazek_1.jpg" alt="dovolena">
+            <img src="obrazky/galerie/obrazek_3.jpeg" alt="dovolena">
+            <img src="obrazky/galerie/obrazek_7.jpeg" alt="dovolena">
+        </section>
+    </main>
 </body>
 </html>
