--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
         </section>
         <section class="galerie">
             <img src="obrazky/galerie/obrazek_1.jpg" alt="dovolena">
+            <img src="obrazky/galerie/obrazek_2.jpg" alt="dovolena">
             <img src="obrazky/galerie/obrazek_3.jpeg" alt="dovolena">
+            <img src="obrazky/galerie/obrazek_4.jpg" alt="dovolena">
+            <img src="obrazky/galerie/obrazek_6.jpg" alt="dovolena">
             <img src="obrazky/galerie/obrazek_7.jpeg" alt="dovolena">
         </section>
     </main>
