--- a/index.html
+++ b/index.html
@@ -19,27 +19,57 @@
             <img src="obrazky/vanoce.jpeg" alt="společné vánoce">
 
             <p class="prani-text">
-                <span class="osloveni">Milá verčo,</span> přeju ti krásné prožití vánočních svátků. Užij si v těchto dnech klidné dny společně se svou rodinou. Běž sáňkovat, udělej si hrnec svařáku a celý ho vypij. <span class="podpis">Tvoje sestra Maruška  s rodinou</span>
+                <span class="osloveni">Nejlepšejší Veru,</span> krásné prožití vánočních svátků do Anglie! Přeju ti to, co nejde zabalit do balícího papíru - klid, pohodu a zdraví. Zastav se na moment a užij si tyto dny s lidmi, co máš ráda. S Martinem si na tebe dáme punč podle tvého legendárního receptu! <span class="podpis">Zdraví tě Tvoje nejlepší kámoška Simča s Martinem</span>
             </p>
         </section>
         <section class="pristi-rok">
             <p class="pristi-rok-text">
-                <span class="pristi-rok-text-nadpis">A v roce 2021...</span> Přála bych si, abychom v roce 2021 na sebe měly víc času, proto si tady odložím, co bychom spolu mohly podniknout. Za rok tobě i mně přijde e-mail, kde nám tyhle věci připomenou, jestli jsme to opravdu splnily…
+                <span class="pristi-rok-text-nadpis">A v roce 2021...</span> Přeju si, abychom na sebe měly víc času. Protože dobrý “partner in crime” se hledá těžko. Proto si tady odložím, co bychom mohly společně podniknout v roce 2021. 
             </p>
 
             <div class="pristi-rok-todo">
-                <p class="pristi-rok-todo-polozka">Jít na víno</p>
-                <p class="pristi-rok-todo-polozka">Konečně začít společně chodit na zumbu</p>
-                <p class="pristi-rok-todo-polozka">Naučit se upéct sušenky ve tvaru jezevčíka </p>
+                <p class="pristi-rok-todo-polozka">Vylézt na Sněžku</p>
+                <p class="pristi-rok-todo-polozka">Spát pod širákem</p>
+                <p class="pristi-rok-todo-polozka">Udělat si domácí zmrzlinu </p>
             </div>
         </section>
         <section class="galerie">
-            <img src="obrazky/galerie/obrazek_1.jpg" alt="dovolena">
-            <img src="obrazky/galerie/obrazek_2.jpg" alt="dovolena">
-            <img src="obrazky/galerie/obrazek_3.jpeg" alt="dovolena">
-            <img src="obrazky/galerie/obrazek_4.jpg" alt="dovolena">
-            <img src="obrazky/galerie/obrazek_6.jpg" alt="dovolena">
-            <img src="obrazky/galerie/obrazek_7.jpeg" alt="dovolena">
+            <div class="foto">
+                <img src="obrazky/galerie/obrazek_1.jpg" alt="dovolena">
+                <p class="popisek">
+                    Tady bude nějaký ultra hustýýý popisek
+                </p>
+            </div>
+            <div class="foto">
+                <img src="obrazky/galerie/obrazek_2.jpg" alt="dovolena">
+                <p class="popisek">
+                    Tady bude nějaký ultra hustýýý popisek
+                </p>
+            </div>
+            <div class="foto">
+                <img src="obrazky/galerie/obrazek_3.jpeg" alt="dovolena">
+                <p class="popisek">
+                    Tady bude nějaký ultra hustýýý popisek
+                </p>
+            </div>
+            <div class="foto">
+                <img src="obrazky/galerie/obrazek_4.jpg" alt="dovolena">
+                <p class="popisek">
+                    Tady bude nějaký ultra hustýýý popisek
+                </p>
+            </div>
+            <div class="foto">
+                <img src="obrazky/galerie/obrazek_6.jpg" alt="dovolena">
+                <p class="popisek">
+                    Tady bude nějaký ultra hustýýý popisek
+                </p>
+            </div>
+            <div class="foto">
+                <img src="obrazky/galerie/obrazek_7.jpeg" alt="dovolena">
+                <p class="popisek">
+                    Tady bude nějaký ultra hustýýý popisek
+                </p>
+            </div>
         </section>
     </main>
 </body>
