--- a/index.html
+++ b/index.html
@@ -37,37 +37,37 @@
             <div class="foto">
                 <img src="obrazky/galerie/obrazek_1.jpg" alt="dovolena">
                 <p class="popisek">
-                    Tady bude nějaký ultra hustýýý popisek
+                    Selfie jak se patří z Florencie
                 </p>
             </div>
             <div class="foto">
                 <img src="obrazky/galerie/obrazek_2.jpg" alt="dovolena">
                 <p class="popisek">
-                    Tady bude nějaký ultra hustýýý popisek
+                    Výšlap na nejvyšší vrchol Chorvatska
                 </p>
             </div>
             <div class="foto">
                 <img src="obrazky/galerie/obrazek_3.jpeg" alt="dovolena">
                 <p class="popisek">
-                    Tady bude nějaký ultra hustýýý popisek
+                    Chorvatsko bez turistů, jen my dvě
                 </p>
             </div>
             <div class="foto">
                 <img src="obrazky/galerie/obrazek_4.jpg" alt="dovolena">
                 <p class="popisek">
-                    Tady bude nějaký ultra hustýýý popisek
+                    Plitvická jezera, kde byl Vinnetou?
                 </p>
             </div>
             <div class="foto">
                 <img src="obrazky/galerie/obrazek_6.jpg" alt="dovolena">
                 <p class="popisek">
-                    Tady bude nějaký ultra hustýýý popisek
+                    Výlet do Mikulova a potom… víno 😀
                 </p>
             </div>
             <div class="foto">
                 <img src="obrazky/galerie/obrazek_7.jpeg" alt="dovolena">
                 <p class="popisek">
-                    Tady bude nějaký ultra hustýýý popisek
+                    V Praze nám bylo blaze
                 </p>
             </div>
         </section>
