--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <img src="obrazky/vanoce.jpeg" alt="společné vánoce">
 
             <p class="prani-text">
-                <span class="osloveni">Nejlepšejší Veru,</span> krásné prožití vánočních svátků do Anglie! Přeju ti to, co nejde zabalit do balícího papíru - klid, pohodu a zdraví. Zastav se na moment a užij si tyto dny s lidmi, co máš ráda. S Martinem si na tebe dáme punč podle tvého legendárního receptu! <span class="podpis">Zdraví tě Tvoje nejlepší kámoška Simča s Martinem</span>
+                <span class="prani-text-osloveni">Nejlepšejší Veru,</span> krásné prožití vánočních svátků do Anglie! Přeju ti to, co nejde zabalit do balícího papíru - klid, pohodu a zdraví. Zastav se na moment a užij si tyto dny s lidmi, co máš ráda. S Martinem si na tebe dáme punč podle tvého legendárního receptu! <span class="prani-text-podpis">Zdraví tě Tvoje nejlepší kámoška Simča s Martinem</span>
             </p>
         </section>
         <section class="pristi-rok">
@@ -35,7 +35,7 @@
         </section>
         <section class="galerie">
             <div class="foto">
-                <img src="obrazky/galerie/obrazek_1.jpg" alt="dovolena">
+                <img src="obrazky/galerie/obrazek_1.jpg" alt="Selfie z Florencie">
                 <p class="popisek">
                     Selfie jak se patří z Florencie
                 </p>
